2008-04-25  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man3/ap_ro_bind.3.man: added manual page
	* doc/man/man3/ap_ro_unbind.3.man: added manual page
	* doc/man/man3/ro_bind.3.man: added manual page
	* doc/man/man3/ro_unbind.3.man: added manual page
	* doc/man/man3/xti_apli.3.man: added manual page

	* src/drivers/otk6.c: added otk6 driver
	* src/example/rfcclient.c: added Sun example files
	* src/example/rfcserver.c: added Sun example files
	* src/include/sys/apli.h: added library files
	* src/lib/rose/xap_rose.VERSION: added library files
	* src/lib/rose/xap_rose.c: added library files
	* src/lib/xds/xds.VERSION: added library files
	* src/lib/xds/xds.c: added library files
	* src/lib/xftam/xftam.VERSION: added library files
	* src/lib/xftam/xftam.c: added library files
	* src/lib/xom/xom.VERSION: added library files
	* src/lib/xom/xom.c: added library files
	* src/modules/apmod.c: added module skeleton
	* src/modules/momod.c: added module skeleton
	* src/modules/tp0.c: added module skeleton

	* doc/Makefile.am: updated manual pages
	* doc/man/Makefile.am: updated manual pages
	* doc/man/striso.refs: updated manual pages
	* doc/man/man3/APLI.3.man: updated manual pages
	* doc/man/man3/OSI.3.man: updated manual pages
	* doc/man/man3/XAP-ROSE.3.man: updated manual pages
	* doc/man/man3/XAP.3.man: updated manual pages
	* doc/man/man3/XDS.3.man: updated manual pages
	* doc/man/man3/XFTAM.3.man: updated manual pages
	* doc/man/man3/XMS.3.man: updated manual pages
	* doc/man/man3/XX25.3.man: updated manual pages
	* doc/man/man3/ap_env.3.man: updated manual pages
	* doc/man/man3/ap_look.3.man: updated manual pages
	* doc/man/man3/ap_rcv.3.man: updated manual pages
	* doc/man/man3/ap_snd.3.man: updated manual pages
	* doc/man/man3/apli.3.man: updated manual pages
	* doc/man/man3/apli_close.3.man: updated manual pages
	* doc/man/man3/apli_env.3.man: updated manual pages
	* doc/man/man3/libosi.3.man: updated manual pages